# dependent-jax

./: README.md  conftest.py  pyproject.toml
jax-stubs/: numpy.pyi
numpy-stubs/: __init__.pyi
pax/: __init__.py
tests/: test_jax_stubs.pyi  test_numpy_stubs.pyi
